@@ -1,4 +1,4 @@
-/* $Id: cmd-list-windows.c,v 1.26 2009-01-11 23:31:46 nicm Exp $ */
+/* $Id: cmd-list-windows.c,v 1.27 2009-01-12 18:22:47 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -81,8 +81,7 @@ cmd_list_windows_exec(struct cmd *self, struct cmd_ctx *ctx)
 		
 			ctx->print(ctx, "   pane %d:"
 			    " %s [%ux%u] [history %u/%u, %llu bytes]", i, name,
-			    screen_size_x(&wp->base), screen_size_y(&wp->base),
-			    gd->hsize, gd->hlimit, size);
+			    wp->sx, wp->sy, gd->hsize, gd->hlimit, size);
 		}
 	}
 
